tests/paczka1/fuzzy1/17027646.err
Error in line 2: JÐbQKPnxZV S772 3,3
Error in line 1: vL0eljtJR2 S737 54,2
Error in line 9: 4zJ S737 358,8
Error in line 10: JabQKPnxZV A747 20,5
Error in line 20: KGhQeakWQ6K S564 18,9
Error in line 21: KGhQeakWQ6K S772 39,9
Error in line 25: hST A747 65,0
Error in line 18: S772 S772 38,6
Error in line 16: JabQKPnxZV S737 2,5
